crates/aiken-lang/src/parser/expr/snapshots/todo_empty.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntodo\n"
---
Trace {
    kind: Todo,
    location: 1..2,
    then: ErrorTerm {
        location: 1..2,
    },
    text: String {
        location: 1..2,
        value: "aiken::todo",
    },
}
