crates/aiken-lang/src/parser/expr/snapshots/todo_expr.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntodo string.join([\"foo\", \"bar\"])\n"
---
Trace {
    kind: Todo,
    location: 5..32,
    then: ErrorTerm {
        location: 5..32,
    },
    text: Call {
        arguments: [
            CallArg {
                label: None,
                location: 17..31,
                value: List {
                    location: 17..31,
                    elements: [
                        ByteArray {
                            location: 18..23,
                            bytes: [
                                102,
                                111,
                                111,
                            ],
                            preferred_format: Utf8String,
                        },
                        ByteArray {
                            location: 25..30,
                            bytes: [
                                98,
                                97,
                                114,
                            ],
                            preferred_format: Utf8String,
                        },
                    ],
                    tail: None,
                },
            },
        ],
        fun: FieldAccess {
            location: 5..16,
            label: "join",
            container: Var {
                location: 5..11,
                name: "string",
            },
        },
        location: 5..32,
    },
}
