crates/aiken-lang/src/parser/expr/snapshots/todo_sugar.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntodo \"foo\"\n"
---
Trace {
    kind: Todo,
    location: 5..10,
    then: ErrorTerm {
        location: 5..10,
    },
    text: String {
        location: 5..10,
        value: "foo",
    },
}
