crates/aiken-lang/src/parser/expr/snapshots/trace_expr_todo.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntrace some_var\n"
---
Trace {
    kind: Trace,
    location: 0..14,
    then: Var {
        location: 0..14,
        name: "Void",
    },
    label: Var {
        location: 6..14,
        name: "some_var",
    },
    arguments: [],
}
