crates/aiken-lang/src/parser/expr/snapshots/trace_labelled.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntrace foo: \"bar\"\n"
---
Trace {
    kind: Trace,
    location: 0..16,
    then: Var {
        location: 0..16,
        name: "Void",
    },
    label: Var {
        location: 6..9,
        name: "foo",
    },
    arguments: [
        String {
            location: 11..16,
            value: "bar",
        },
    ],
}
