crates/aiken-lang/src/parser/expr/snapshots/trace_string.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntrace @\"foo\"\na\n"
---
Trace {
    kind: Trace,
    location: 0..14,
    then: Var {
        location: 13..14,
        name: "a",
    },
    label: String {
        location: 6..12,
        value: "foo",
    },
    arguments: [],
}
