crates/aiken-lang/src/parser/expr/snapshots/trace_variadic.snap
---
source: crates/aiken-lang/src/parser/expr/fail_todo_trace.rs
description: "Code:\n\ntrace \"foo\": @\"bar\", baz\n"
---
Trace {
    kind: Trace,
    location: 0..24,
    then: Var {
        location: 0..24,
        name: "Void",
    },
    label: String {
        location: 6..11,
        value: "foo",
    },
    arguments: [
        String {
            location: 13..19,
            value: "bar",
        },
        Var {
            location: 21..24,
            name: "baz",
        },
    ],
}
